--- a/index.html
+++ b/index.html
@@ -36,33 +36,33 @@
 
                <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
-                <img src="Screenshot 2023-11-17 182351.png"/>
+                <img src="Screenshot 2023-11-17 182351.png" alt="project-1" />
                 <p>Tribute Page</p>
                 </div>
                 </a>
 
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
-                <img src="Screenshot 2023-11-17 193003.png"/>
+                <img src="Screenshot 2023-11-17 193003.png" alt="project-2" />
                 <p>Form</p>
                 </div>
                 </a>
 
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
-                <img src="Screenshot 2023-11-17 193322.png"/>
+                <img src="Screenshot 2023-11-17 193322.png" alt="project-3"/>
                 <p>Java Document</p>
                 </div>
                 </a>
 
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
-                <img src="Screenshot 2023-11-18 120539.png"/>
+                <img src="Screenshot 2023-11-18 120539.png" alt="project-4"/>
                 <p>Simple Quiz</p>
                 </div>
                 </a>
 
-                <a id="project-link" href="" target="_blank">
+                <a id="project-link" href="" target="_blank" alt="project-5">
                 <div id="hover-effect">
                 <img src="Screenshot 2023-11-18 120710.png"/>
                 <p>Balance Sheet</p>
@@ -71,7 +71,7 @@
 
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
-                <img src="Screenshot 2023-11-18 120940.png"/>
+                <img src="Screenshot 2023-11-18 120940.png" alt="project-6"/>
                 <p>Magazine</p>
                 </div>
                 </a>
