--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8"/>
-        <meta content="width=device-width" name="viewport"/>
+        <meta content="width=device-width, maximum-scale=1.0, initial-scale=1" name="viewport"/>
     </head>
     <body>
 
