--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
                 <img src="Screenshot 2023-11-17 193003.png" alt="project-2" />
-                <p>Form</p>
+                <p>Form Page</p>
                 </div>
                 </a>
 
@@ -72,7 +72,7 @@
                 <a id="project-link" href="" target="_blank">
                 <div id="hover-effect">
                 <img src="Screenshot 2023-11-18 120940.png" alt="project-6"/>
-                <p>Magazine</p>
+                <p>Magazine Style</p>
                 </div>
                 </a>
 
